unpackaged/main/default/objects/project_cloud__Color_Tag_Set_Override__c/project_cloud__Color_Tag_Set_Override__c.object-meta.xml
<CustomObject>
    <label>Color Tag Set Override</label>
    <nameField>
        <displayFormat>CTO-{00000000}</displayFormat>
        <label>Color Tag Set Override Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Color Tag Set Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>