unpackaged/main/default/objects/project_cloud__Color_Tag_Set_Override__c/fields/project_cloud__Board_Process__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Board_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Board Process</label>
    <referenceTo>project_cloud__Board_Process__c</referenceTo>
    <relationshipLabel>Color Tag Set Overrides</relationshipLabel>
    <relationshipName>Color_Tag_Set_Overrides</relationshipName>
    <type>Lookup</type>
</CustomField>