unpackaged/main/default/objects/project_cloud__Color_Tag_Set_Override__c/fields/project_cloud__Color_Tag_Set__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Color_Tag_Set__c</fullName>
    <label>Color Tag Set</label>
    <referenceTo>project_cloud__Color_Tag_Set__c</referenceTo>
    <relationshipLabel>Color Tag Set Overrides</relationshipLabel>
    <relationshipName>Color_Tag_Set_Overrides</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>