unpackaged/main/default/objects/project_cloud__Color_Tag_Set_Override__c/fields/project_cloud__Project__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Color Tag Set Overrides</relationshipLabel>
    <relationshipName>Color_Tag_Set_Overrides</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>